# GlobalLogicTestTask

./: CMakeLists.txt  README.md  main.cpp
